Clean up OperationRunner